DHParser Verions 1.8.3
......................

- nodetree.py: experimental split-method added to Node-class
- collections.namedtuple replaced by typing.NamedTuple-class
- configuration.py: read_local_config() now reads and processes
  all config files from scriptdir, user's config dir and
  current directory in this order


DHParser Version 1.8.2 (6.2.2024)
.................................

- bugfixes for xast and nast-serializations
- removed warnings about unused symbols in the AST-table to avoid,
  because it is too confusing for newcomers.
- updates to nodetree.ContentMapping: methods path(), pos() and path_str()
  added; markup() now avoids the generation of single anynomous leaves.
- xml and S-expression-serialization now allows word wrapping
- script XMLreflow.py added to reflow XML-files (experimental)
- experimental nodetree.SerializationMapping added (not yet documented,
  see tests in test_nodetree for now...)


DHParser Version 1.8.1 (19.10.2024)
...................................

- optional speed optimizations (experimental!) that work by compiling
  certain parts of the grammar to regular expressions. See config value
  "optimizations" or put "@optimizations=all" at the top of your grammar.
- serializations for xast and unist ("ndst") added.
  See https://github.com/syntax-tree/unist
  and https://github.com/syntax-tree/xast
- fast-path for Series-parser, in case no items are marked as mandatory
- faster unit-tests: History recording will only be invoked if a
  test fails in which case the test will be repeated with history
  recording. (If a tested parser contains lookahead statements,
  history-recording is always invoked, because it is needed to
  detect false negatives.)
- unit-test-scripts (i.e. "tst_..._grammary.py") can now be invoked
  with the "--history" (or "-p") option to record detailed logs for all
  tests, not only those tests that have failed. (So, it is easier to
  study what a particular parser actually does.)