@@ -69,7 +69,7 @@ from DHParser.preprocess import nil_preprocessor, PreprocessorFunc, Preprocessor
     gen_find_include_func, preprocess_includes, make_preprocessor, chain_preprocessors
 from DHParser.stringview import StringView
 from DHParser.toolkit import is_filename, load_if_file, cpu_count, RX_NEVER_MATCH, \
-    ThreadLocalSingletonFactory, expand_table, md5, as_list, INFINITE
+    ThreadLocalSingletonFactory, expand_table, md5, as_list, INFINITE, static
 from DHParser.trace import set_tracer, resume_notices_on, trace_history
 from DHParser.transform import is_empty, remove_if, TransformationDict, TransformerFunc, \
     transformation_factory, remove_children_if, move_fringes, normalize_whitespace, \
@@ -279,7 +279,7 @@ ts2python_AST_transformation_table = {
 def ts2pythonTransformer() -> TransformerCallable:
     """Creates a transformation function that does not share state with other
     threads or processes."""
-    return staticmethod(partial(transformer,
+    return static(partial(transformer,
         transformation_table=ts2python_AST_transformation_table.copy(),
         src_stage='cst', dst_stage='ast'))
 
